fixed weird white space

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -17,12 +17,14 @@
 
 .logo{
   width: 100%;
-  height: auto;
+  height: 100%;
+  position: absolute;
   background: $twilight;
 }
 
 .mainPage{
   width: 90%;
+  position: absolute;
 }
 
 #homeImage{
