--- a/assets/ember-quickstart.css
+++ b/assets/ember-quickstart.css
@@ -200,11 +200,13 @@ ul.navigation {
 
 .logo {
   width: 100%;
-  height: auto;
+  height: 100%;
+  position: absolute;
   background: #39374b; }
 
 .mainPage {
-  width: 90%; }
+  width: 90%;
+  position: absolute; }
 
 #homeImage {
   width: 100%;
